functionality in place

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,4 +1,13 @@
-h1 {
+p {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: purple;
+}
+
+.container {
+    text-align: center;
+    display: block;
+}
+
+.logo   {
+    width: 22rem;
 }
