--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,3 +1,6 @@
+.hide {
+    display: none;
+}
 
 label {
     font-family: 'Patrick', sans-serif;
@@ -12,6 +15,8 @@ input {
 button {
     font-family: 'Patrick', sans-serif;
     font-size: large;
+    display: block;
+    margin-left: 38%;
 }
 
 .app {
@@ -32,4 +37,5 @@ button {
 .logo   {
     width: 10rem;
     margin-bottom: -2rem;
+    
 }
